Fixing z-index mobile

--- a/public/css/app-web-styles.css
+++ b/public/css/app-web-styles.css
@@ -21310,7 +21310,7 @@ input:focus:-ms-input-placeholder {
     top: 40px;
     right: -30px;
     width: 293px;
-    z-index: 1;
+    z-index: 2;
   }
 
   .header-mobile-menu .cart-white-mobile .cart-inside-mobile .empty-cart {
