--- a/resources/assets/sass/web/headers_mobile.scss
+++ b/resources/assets/sass/web/headers_mobile.scss
@@ -75,7 +75,7 @@
         top: 40px;
         right: -30px;
         width: 293px;
-        z-index: 1;
+        z-index: 2;
 
         .empty-cart {
           padding: 2.5em 0;
